fix(analitics): [PLTDA-1355] fix trend chart spacing issues (#2068)

--- a/src/pages/stats/CustomFieldSelect.less
+++ b/src/pages/stats/CustomFieldSelect.less
@@ -1,4 +1,5 @@
 @import (reference) '~css/typography.less';
+@import '~css/new/layout';
 
 :local {
     .wrapper {
@@ -27,5 +28,8 @@
 
     .tooltip {
         font-size: @heading-sub-section-regular-font-size;
+        i {
+            margin-left: @layout-spacing-xs;
+        }
     }
 }
